more options for testing